--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -7,3 +7,5 @@
 @import "../components/header";
 
 @import "../layout/index/intro";
+@import "../layout/index/about";
+@import "../layout/index/staff";
