--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -8,7 +8,6 @@
     align-items: center;
     justify-content: center;
 }
-
 @mixin hover-replacement($t-color-hover, $bg-color-hover) {
     position: relative;
     @include flex-center();
@@ -18,6 +17,7 @@
     &::before {
         content: attr(data-hover-text);
         position: absolute;
+        z-index: 2;
         left: 0;
         width: 100%;
         height: 100%;
@@ -33,5 +33,77 @@
         &::before {
             transform: translateY(0);
         }
+    }
+}
+@mixin button($border-color, $border-color-hover, $bg-color, $bg-color-hover, $t-color, $t-color-hover, $before-bg) {
+	position: relative;
+	overflow: hidden;
+    display: block;
+	z-index: 0;
+    padding: $size-14px $size-24px;
+	border: $size-1-25px solid $border-color;
+	background: $bg-color;
+	color: $t-color;
+    font-size: $size-12px;
+    line-height: $size-12px;
+    text-transform: uppercase;
+	transition-duration: $duration;
+	&--icon {
+		pointer-events: none;
+        width: fit-content;
+        height: fit-content;
+        position: absolute;
+        scale: 0.7;
+	}
+	&::before {
+		content: "";
+		position: absolute;
+		z-index: -1;
+		top: 0%;
+		right: 0%;
+		width: 1rem;
+		height: 1rem;
+		scale: 0;
+		border-radius: 50%;
+		background: $before-bg;
+		transition-duration: 0.6s;
+		animation-timing-function: ease-out;
+	}
+	&:hover::before,
+	&:focus::before {
+		scale: 56;
+		background: $before-bg;
+	}
+
+	&:hover,
+	&:focus {
+		color: $t-color-hover;
+		background: $bg-color-hover;
+		border-color: $border-color-hover;
+	}
+}
+@mixin card-effect($max-width, $max-height, $padding, $padding-bottom) {
+    display: block;
+    max-width: $max-width;
+    max-height: $max-height;
+    background-color: $color-FFFFFF;
+    padding: $padding;
+    padding-bottom: $padding-bottom;
+}
+@mixin block-tag($color) {
+    position: relative;
+    text-transform: uppercase;
+    color: $color;
+    font-size: $size-14px;
+    font-weight: $fw-660;
+    padding-bottom: 0.25rem;
+    &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: $size-4px;
+        width: 100%;
+        background-color: $color;
     }
 }
