--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -9,3 +9,4 @@
 @import "../layout/index/intro";
 @import "../layout/index/about";
 @import "../layout/index/staff";
+@import "../layout/index/services";
