--- a/styles/layout/index/_about.scss
+++ b/styles/layout/index/_about.scss
@@ -13,10 +13,7 @@
         @include block-tag($color-020109);
     }
     &__title {
-        font-size: $size-48px;
-        line-height: $size-48px;
-        font-weight: $fw-660;
-        margin-top: 2rem;
+        @include block-title();
     }
     &__body {
         padding-left: 18rem;
