--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -1,59 +1,59 @@
 @mixin content-width() {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 $size-16px;
+	max-width: 1440px;
+	margin: 0 auto;
+	padding: 0 $size-16px;
 }
 @mixin flex-center() {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 @mixin hover-replacement($t-color-hover, $bg-color-hover) {
-    position: relative;
-    @include flex-center();
-    padding: calc($size-12px / 2);
-    overflow: hidden;
-    transition: all $duration ease;
-    &::before {
-        content: attr(data-hover-text);
-        position: absolute;
-        z-index: 2;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        @include flex-center();
-        background-color: $bg-color-hover;
-        color: $t-color-hover;
-        pointer-events: none;
-        transform: translateY(100%);
-        transition: all $duration ease;
-    }
-    &:hover {
-        transform: translateY(0);
-        &::before {
-            transform: translateY(0);
-        }
-    }
+	position: relative;
+	@include flex-center();
+	padding: calc($size-12px / 2);
+	overflow: hidden;
+	transition: all $duration ease;
+	&::before {
+		content: attr(data-hover-text);
+		position: absolute;
+		z-index: 2;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		@include flex-center();
+		background-color: $bg-color-hover;
+		color: $t-color-hover;
+		pointer-events: none;
+		transform: translateY(100%);
+		transition: all $duration ease;
+	}
+	&:hover {
+		transform: translateY(0);
+		&::before {
+			transform: translateY(0);
+		}
+	}
 }
 @mixin button($border-color, $border-color-hover, $bg-color, $bg-color-hover, $t-color, $t-color-hover, $before-bg) {
 	position: relative;
 	overflow: hidden;
-    display: block;
+	display: block;
 	z-index: 0;
-    padding: $size-14px $size-24px;
+	padding: $size-14px $size-24px;
 	border: $size-1-25px solid $border-color;
 	background: $bg-color;
 	color: $t-color;
-    font-size: $size-12px;
-    line-height: $size-12px;
-    text-transform: uppercase;
+	font-size: $size-12px;
+	line-height: $size-12px;
+	text-transform: uppercase;
 	transition-duration: $duration;
 	&--icon {
 		pointer-events: none;
-        width: fit-content;
-        height: fit-content;
-        position: absolute;
-        scale: 0.7;
+		width: fit-content;
+		height: fit-content;
+		position: absolute;
+		scale: 0.7;
 	}
 	&::before {
 		content: "";
@@ -83,27 +83,61 @@
 	}
 }
 @mixin card-effect($max-width, $max-height, $padding, $padding-bottom) {
-    display: block;
-    max-width: $max-width;
-    max-height: $max-height;
-    background-color: $color-FFFFFF;
-    padding: $padding;
-    padding-bottom: $padding-bottom;
+	display: block;
+	max-width: $max-width;
+	max-height: $max-height;
+	background-color: $color-FFFFFF;
+	padding: $padding;
+	padding-bottom: $padding-bottom;
 }
 @mixin block-tag($color) {
-    position: relative;
-    text-transform: uppercase;
-    color: $color;
-    font-size: $size-14px;
+	position: relative;
+	text-transform: uppercase;
+	color: $color;
+	font-size: $size-14px;
+	font-weight: $fw-660;
+	padding-bottom: 0.25rem;
+	&::before {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		height: $size-4px;
+		width: 100%;
+		background-color: $color;
+	}
+}
+@mixin block-title($margin-top: 2rem) {
+    font-size: $size-48px;
+    line-height: $size-48px;
     font-weight: $fw-660;
-    padding-bottom: 0.25rem;
-    &::before {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        height: $size-4px;
-        width: 100%;
-        background-color: $color;
-    }
+    margin-top: $margin-top;
+}
+@mixin block-fog-border() {
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	z-index: 0;
+	pointer-events: none;
+	&-layer {
+		position: absolute;
+		&--1,
+		&--2 {
+			border-radius: 50%;
+			background: linear-gradient(to bottom, rgba($color-FFFFFF, 1) 0%, rgba($color-FFFFFF, 1) 40%, rgba($color-0681CE, 1) 70%, rgba($color-00276D, 1) 100%);
+			filter: blur(25px);
+		}
+		&--1 {
+			height: 20rem;
+			width: 90%;
+			left: -10rem;
+			bottom: -10rem;
+		}
+		&--2 {
+			height: 10rem;
+			width: 50%;
+			right: -10rem;
+			bottom: -5rem;
+		}
+	}
 }
