--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -126,7 +126,7 @@ body {
   pointer-events: none;
   width: 2.25rem;
   height: 1.5rem;
-  transition-duration: 0.5s;
+  transition-duration: 0.7s;
 }
 @supports (display: contents) {
   .header__nav {
@@ -150,7 +150,7 @@ body {
   justify-content: center;
   padding: 0.375rem;
   overflow: hidden;
-  transition: all 0.5s ease;
+  transition: all 0.7s ease;
   text-transform: uppercase;
   font-weight: 660;
 }
@@ -168,7 +168,7 @@ body {
   color: #020109;
   pointer-events: none;
   transform: translateY(100%);
-  transition: all 0.5s ease;
+  transition: all 0.7s ease;
 }
 .header__nav-item:hover {
   transform: translateY(0);
@@ -197,7 +197,7 @@ body {
   justify-content: center;
   padding: 0.375rem;
   overflow: hidden;
-  transition: all 0.5s ease;
+  transition: all 0.7s ease;
   text-transform: uppercase;
   font-weight: 660;
 }
@@ -215,7 +215,7 @@ body {
   color: #020109;
   pointer-events: none;
   transform: translateY(100%);
-  transition: all 0.5s ease;
+  transition: all 0.7s ease;
 }
 .header__tel:hover {
   transform: translateY(0);
@@ -300,7 +300,7 @@ body {
   font-size: 0.75rem;
   line-height: 0.75rem;
   text-transform: uppercase;
-  transition-duration: 0.5s;
+  transition-duration: 0.7s;
   margin-top: 2rem;
 }
 .intro__slogan-button--icon {
@@ -344,8 +344,8 @@ body {
 .intro__video-wrapper {
   cursor: pointer;
   display: block;
-  max-width: 17rem;
-  max-height: auto;
+  width: 17rem;
+  height: auto;
   background-color: #FFFFFF;
   padding: 0.25rem;
   padding-bottom: none;
@@ -573,7 +573,7 @@ body {
   font-size: 0.75rem;
   line-height: 0.75rem;
   text-transform: uppercase;
-  transition-duration: 0.5s;
+  transition-duration: 0.7s;
   padding: 0.75rem 2rem;
   margin-top: 2rem;
 }
@@ -691,7 +691,7 @@ body {
   height: 100%;
   width: 55%;
   border-radius: 2rem;
-  background-color: #d6d0c6;
+  background-color: white;
   pointer-events: none;
 }
 .services__switcher-item {
@@ -705,20 +705,94 @@ body {
 .services__list {
   counter-reset: item-counter;
   display: grid;
-  grid-auto-rows: 9.625rem;
+  grid-auto-rows: 11.625rem;
 }
 .services__item {
   max-width: 100vw;
   height: 100%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  gap: 1rem;
   padding: 2rem 0;
+  border-top: 0.0625rem solid rgba(214, 208, 198, 0.25);
+  opacity: 0.5;
+  transition-duration: 0.7s;
+}
+.services__item:last-child {
+  border-bottom: 0.0625rem solid rgba(214, 208, 198, 0.25);
+}
+.services__item * {
+  pointer-events: none;
+}
+.services__item:hover {
+  opacity: 1;
+}
+.services__item:hover .services__image-wrapper {
+  scale: 1;
+  opacity: 1;
+}
+.services__item:hover .services__icon {
+  scale: 1;
+  opacity: 1;
+  translate: 0 0;
 }
 .services__number {
+  height: fit-content;
   font-size: 0.75rem;
   font-weight: 660;
 }
 .services__number::before {
   counter-increment: item-counter;
   content: "0" counter(item-counter);
+}
+.services__name {
+  height: fit-content;
+  font-size: 1.125rem;
+  font-weight: 660;
+}
+.services__desc {
+  height: fit-content;
+  font-size: 0.8125rem;
+  font-weight: 550;
+}
+.services__imagebox {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.services__image-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  translate: -50% -50%;
+  display: block;
+  width: 12rem;
+  height: 15rem;
+  background-color: #FFFFFF;
+  padding: 0.25rem;
+  padding-bottom: 1rem;
+  scale: 0.5;
+  opacity: 0;
+  transition-duration: 0.7s;
+}
+.services__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.services__icon-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.services__icon {
+  display: block;
+  rotate: 45deg;
+  font-size: 1rem;
+  translate: -10rem 0;
+  scale: 0.5;
+  opacity: 0;
+  transition-duration: 0.7s;
 }
