--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -1,4 +1,5 @@
 // Sizes
+$size-1px: 0.0625rem;
 $size-1-25px: 0.078125rem;
 $size-1-5px: 0.09375rem;
 $size-4px: 0.25rem;
@@ -36,4 +37,4 @@ $line-height: 150%;
 $fw-660: 660;
 $fw-550: 550;
 
-$duration: 0.5s;
+$duration: 0.7s;
