--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -10,3 +10,4 @@
 @import "../layout/index/about";
 @import "../layout/index/staff";
 @import "../layout/index/services";
+@import "../layout/index/steps";
