--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -150,7 +150,7 @@ body {
   justify-content: center;
   padding: 0.375rem;
   overflow: hidden;
-  transition: all 0.7s ease;
+  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
   text-transform: uppercase;
   font-weight: 660;
 }
@@ -168,7 +168,7 @@ body {
   color: #020109;
   pointer-events: none;
   transform: translateY(100%);
-  transition: all 0.7s ease;
+  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
 }
 .header__nav-item:hover {
   transform: translateY(0);
@@ -197,7 +197,7 @@ body {
   justify-content: center;
   padding: 0.375rem;
   overflow: hidden;
-  transition: all 0.7s ease;
+  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
   text-transform: uppercase;
   font-weight: 660;
 }
@@ -215,7 +215,7 @@ body {
   color: #020109;
   pointer-events: none;
   transform: translateY(100%);
-  transition: all 0.7s ease;
+  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
 }
 .header__tel:hover {
   transform: translateY(0);
@@ -236,17 +236,12 @@ body {
   margin: 0 auto;
   padding: 0 1rem;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 4rem;
-}
-.intro__title-container {
-  position: relative;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  gap: 12rem;
 }
 .intro__titlebox {
-  position: sticky;
-  top: 0;
+  height: fit-content;
   font-weight: 660;
   display: flex;
   align-items: center;
@@ -679,6 +674,7 @@ body {
   position: relative;
   z-index: 0;
   width: fit-content;
+  overflow: hidden;
   display: flex;
   border: 0.09375rem solid rgba(214, 208, 198, 0.25);
   border-radius: 2rem;
@@ -687,17 +683,26 @@ body {
 .services__switcher-indicator {
   position: absolute;
   top: 0;
+  left: 0;
   z-index: -1;
   height: 100%;
   width: 55%;
   border-radius: 2rem;
   background-color: white;
   pointer-events: none;
+  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
 }
 .services__switcher-item {
   cursor: pointer;
+  position: relative;
   mix-blend-mode: difference;
   padding: 0.5rem 3.5rem;
+}
+.services__switcher-item[data-type=juridical].active ~ .services__switcher-indicator {
+  transform: translateX(0%);
+}
+.services__switcher-item[data-type=physical].active ~ .services__switcher-indicator {
+  transform: translateX(90%);
 }
 .services__body {
   margin-top: 6rem;
@@ -706,6 +711,9 @@ body {
   counter-reset: item-counter;
   display: grid;
   grid-auto-rows: 11.625rem;
+}
+.services__list:not(:first-child) {
+  display: none;
 }
 .services__item {
   max-width: 100vw;
@@ -795,4 +803,51 @@ body {
   scale: 0.5;
   opacity: 0;
   transition-duration: 0.7s;
+}
+
+.steps {
+  padding: 4rem 0;
+}
+.steps__container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+.steps__title {
+  font-size: 3rem;
+  line-height: 3rem;
+  font-weight: 660;
+  margin-top: 0;
+}
+.steps__list {
+  counter-reset: item-counter;
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+  margin-top: 4rem;
+}
+.steps__item {
+  width: 20%;
+  text-wrap: wrap;
+}
+.steps__item-number {
+  counter-increment: item-counter;
+  font-size: 0.875rem;
+  font-weight: 550;
+}
+.steps__item-number::before {
+  content: "(0" counter(item-counter) ")";
+}
+.steps__item-title {
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  font-weight: 660;
+  margin-top: 2rem;
+}
+.steps__item-text {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 550;
+  margin-top: 1rem;
+  opacity: 0.5;
 }
