--- a/styles/layout/index/_intro.scss
+++ b/styles/layout/index/_intro.scss
@@ -7,17 +7,12 @@
 	&__container {
 		@include content-width();
 		height: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		gap: 4rem;
-	}
-	&__title-container {
-		position: relative;
+		display: grid;
+		grid-template-rows: repeat(2, 1fr);
+		gap: 12rem;
 	}
 	&__titlebox {
-		position: sticky;
-		top: 0;
+		height: fit-content;
 		font-weight: $fw-660;
 		display: flex;
 		align-items: center;
