--- a/styles/layout/index/_services.scss
+++ b/styles/layout/index/_services.scss
@@ -1,128 +1,141 @@
 .services {
-    padding: 2rem 0;
-    margin-top: 6rem;
-    &__container {
-        @include content-width();
-    }
-    &__titlebox {
-        width: 80%;
-    }
-    &__tag {
-        @include block-tag($color-FFFFFF);
-    }
-    &__title {
-        @include block-title();
-    }
-    &__switcher {
-        position: relative;
-        z-index: 0;
-        width: fit-content;
-        display: flex;
-        border: $size-1-5px solid rgba($color-D6D0C6, 0.25);
-        border-radius: 2rem;
-        margin-top: 2rem;
-        &-indicator {
-            position: absolute;
-            top: 0;
-            z-index: -1;
-            height: 100%;
-            width: 55%;
-            border-radius: 2rem;
-            background-color: rgba($color-FFFFFF, 1);
-            pointer-events: none;
+	padding: 2rem 0;
+	margin-top: 6rem;
+	&__container {
+		@include content-width();
+	}
+	&__titlebox {
+		width: 80%;
+	}
+	&__tag {
+		@include block-tag($color-FFFFFF);
+	}
+	&__title {
+		@include block-title();
+	}
+	&__switcher {
+		position: relative;
+		z-index: 0;
+		width: fit-content;
+		overflow: hidden;
+		display: flex;
+		border: $size-1-5px solid rgba($color-D6D0C6, 0.25);
+		border-radius: 2rem;
+		margin-top: 2rem;
+		&-indicator {
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: -1;
+			height: 100%;
+			width: 55%;
+			border-radius: 2rem;
+			background-color: rgba($color-FFFFFF, 1);
+			pointer-events: none;
+			transition: transform $duration $cubic-bezier;
+		}
+		&-item {
+			cursor: pointer;
+			position: relative;
+			mix-blend-mode: difference;
+			padding: 0.5rem 3.5rem;
+			&[data-type="juridical"].active ~ .services__switcher-indicator {
+				transform: translateX(0%);
+			}
+			&[data-type="physical"].active ~ .services__switcher-indicator {
+				transform: translateX(90%);
+			}
+		}
+	}
+	&__body {
+		margin-top: 6rem;
+	}
+	&__list {
+		counter-reset: item-counter;
+		display: grid;
+		grid-auto-rows: 11.625rem;
+        &:not(:first-child) {
+            display: none;
         }
-        &-item {
-            cursor: pointer;
-            mix-blend-mode: difference;
-            padding: 0.5rem 3.5rem;
-        }
-    }
-    &__body {
-        margin-top: 6rem;
-    }
-    &__list {
-        counter-reset: item-counter;
-        display: grid;
-        grid-auto-rows: 11.625rem;
-    }
-    &__item {
-        max-width: 100vw;
-        height: 100%;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        gap: 1rem;
-        padding: 2rem 0;
-        border-top: $size-1px solid rgba($color-D6D0C6, 0.25);
-        opacity: 0.5;
-        transition-duration: $duration;
-        &:last-child {
-            border-bottom: $size-1px solid rgba($color-D6D0C6, 0.25);
-        }
-        & * {
-            pointer-events: none;
-        }
-        &:hover {
-            opacity: 1;
-            & .services__image-wrapper {
-                scale: 1;
-                opacity: 1;
-            }
-            & .services__icon {
-                scale: 1;
-                opacity: 1;
-                translate: 0 0;
-            }
-        }
-    }
-    &__number {
-        height: fit-content;
-        font-size: $size-12px;
-        font-weight: $fw-660;
-        &::before {
-            counter-increment: item-counter;
-            content: '0' counter(item-counter);
-        }
-    }
-    &__name {
-        height: fit-content;
-        font-size: $size-18px;
-        font-weight: $fw-660;
-    }
-    &__desc {
-        height: fit-content;
-        font-size: $size-13px;
-        font-weight: $fw-550;
-    }
-    &__imagebox {
-        position: relative;
-        @include flex-center();
-    }
-    &__image-wrapper {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        z-index: 1;
-        translate: -50% -50%;
-        @include card-effect(12rem, 15rem, 0.25rem, 1rem);
-        scale: 0.5;
-        opacity: 0;
-        transition-duration: $duration;
-    }
-    &__image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    &__icon-wrapper {
-        @include flex-center();
-    }
-    &__icon {
-        display: block;
-        rotate: 45deg;
-        font-size: 1rem;
-        translate: -10rem 0;
-        scale: 0.5;
-        opacity: 0;
-        transition-duration: $duration;
-    }
+	}
+	&__item {
+		max-width: 100vw;
+		height: 100%;
+		display: grid;
+		grid-template-columns: repeat(5, 1fr);
+		gap: 1rem;
+		padding: 2rem 0;
+		border-top: $size-1px solid rgba($color-D6D0C6, 0.25);
+		opacity: 0.5;
+		transition-duration: $duration;
+		&:last-child {
+			border-bottom: $size-1px solid rgba($color-D6D0C6, 0.25);
+		}
+		& * {
+			pointer-events: none;
+		}
+		&:hover {
+			opacity: 1;
+			& .services__image-wrapper {
+				scale: 1;
+				opacity: 1;
+			}
+			& .services__icon {
+				scale: 1;
+				opacity: 1;
+				translate: 0 0;
+			}
+		}
+	}
+	&__number {
+		height: fit-content;
+		font-size: $size-12px;
+		font-weight: $fw-660;
+		&::before {
+			counter-increment: item-counter;
+			content: "0" counter(item-counter);
+		}
+	}
+	&__name {
+		height: fit-content;
+		font-size: $size-18px;
+		font-weight: $fw-660;
+	}
+	&__desc {
+		height: fit-content;
+		font-size: $size-13px;
+		font-weight: $fw-550;
+	}
+	&__imagebox {
+		position: relative;
+		@include flex-center();
+	}
+	&__image-wrapper {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		z-index: 1;
+		translate: -50% -50%;
+		@include card-effect(12rem, 15rem, 0.25rem, 1rem);
+		scale: 0.5;
+		opacity: 0;
+		transition-duration: $duration;
+	}
+	&__image {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	&__icon-wrapper {
+		@include flex-center();
+	}
+	&__icon {
+		display: block;
+		rotate: 45deg;
+		font-size: 1rem;
+		translate: -10rem 0;
+		scale: 0.5;
+		opacity: 0;
+		transition-duration: $duration;
+	}
 }
