--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -1,5 +1,6 @@
 @import "../utils/variables";
 @import "../utils/mixins";
+@import "../utils/leaflet";
 
 @import "../base/reset";
 @import "../base/typography";
@@ -11,3 +12,5 @@
 @import "../layout/index/staff";
 @import "../layout/index/services";
 @import "../layout/index/steps";
+@import "../layout/index/cases";
+@import "../layout/index/connection";
