--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -34,6 +34,8 @@ $color-020109: #020109;
 // Typography
 $base-fs: 16px;
 $line-height: 150%;
+$fw-900: 900;
+$fw-750: 750;
 $fw-660: 660;
 $fw-550: 550;
 
