--- a/styles/layout/index/_connection.scss
+++ b/styles/layout/index/_connection.scss
@@ -1,22 +1,111 @@
 .connection {
-    padding: 10rem 0;
-    &__container {
-        @include content-width();
-    }
-    &__title {
-        @include fs-text();
-        text-wrap: nowrap;
-    }
-    &__links {
-        display: flex;
-        justify-content: space-between;
-        gap: 1rem;
-        &-item {
-            @include hover-replacement($color-020109, $color-FFFFFF);
-            text-transform: uppercase;
-            font-size: $size-12px;
-            line-height: $size-12px;
-            font-weight: $fw-660;
-        }
-    }
+    position: relative;
+	padding: 10rem 0;
+	&__container {
+		@include content-width();
+	}
+	&__title {
+		@include fs-text();
+		text-wrap: nowrap;
+	}
+	&__links {
+		display: flex;
+		justify-content: space-between;
+		gap: 1rem;
+		&-item {
+			@include hover-replacement($color-020109, $color-FFFFFF);
+			text-transform: uppercase;
+			font-size: $size-12px;
+			line-height: $size-12px;
+			font-weight: $fw-660;
+		}
+	}
+	&__form {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		margin-top: $size-128px;
+	}
+	&__inputbox {
+		width: 100%;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 1rem;
+	}
+	&__input {
+		cursor: text;
+		color: $color-FFFFFF;
+		font-size: $size-14px;
+		padding: 1.5rem 2rem;
+		background-color: rgba($color-FFFFFF, 0.02);
+		border: rgba($color-D6D0C6, 0.1) solid $size-1-25px;
+		width: 100%;
+		height: 4rem;
+		transition-duration: $duration;
+		&:hover {
+			border-color: rgba($color-D6D0C6, 0.5);
+		}
+		&:focus {
+			border-color: rgba($color-D6D0C6, 1);
+			outline: none;
+		}
+		&--custom {
+			resize: none;
+			height: $size-128px;
+		}
+		&-wrapper {
+			&--custom {
+				grid-column: span 3;
+			}
+		}
+	}
+	&__select {
+	}
+	&__footnote {
+		font-size: $size-12px;
+		line-height: $size-12px;
+		opacity: 0.25;
+		&-link {
+			text-decoration: underline;
+		}
+	}
+	&__button {
+		@include button($color-FFFFFF, $color-FFFFFF, none, none, inherit, $color-020109, $color-FFFFFF);
+		width: 100%;
+		font-weight: $fw-660;
+		padding: 1.5rem 3rem;
+		&--icon {
+			right: 0.1rem;
+			top: 0.1rem;
+		}
+		&:hover::after,
+        &:focus::after {
+			scale: 180;
+		}
+	}
+	&__fog {
+		pointer-events: none;
+		&-layer {
+			position: absolute;
+		    z-index: -1;
+			&--1,
+			&--2 {
+				border-radius: 50%;
+				background: radial-gradient( rgba($color-0681CE, 0.7) 0%, rgba($color-00276D, 1) 100%);
+				filter: blur(200px);
+			}
+			&--1 {
+				height: 50rem;
+                aspect-ratio: 1/1;
+				left: 40%;
+				top: 10%;
+			}
+			&--2 {
+				height: 30rem;
+                aspect-ratio: 1/1;
+				left: 20%;
+				top: 40%;
+			}
+		}
+	}
 }
