--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -6,6 +6,7 @@
 @import "../base/typography";
 
 @import "../components/header";
+@import "../components/footer";
 
 @import "../layout/index/intro";
 @import "../layout/index/about";
