--- a/styles/layout/index/_services.scss
+++ b/styles/layout/index/_services.scss
@@ -32,7 +32,7 @@
 			border-radius: 2rem;
 			background-color: rgba($color-FFFFFF, 1);
 			pointer-events: none;
-			transition: transform $duration $cubic-bezier;
+			transition: transform $duration $spring;
 		}
 		&-item {
 			cursor: pointer;
@@ -74,7 +74,8 @@
 		& * {
 			pointer-events: none;
 		}
-		&:hover {
+		&:hover,
+		&:focus {
 			opacity: 1;
 			& .services__image-wrapper {
 				scale: 1;
