--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -40,4 +40,4 @@ $fw-660: 660;
 $fw-550: 550;
 
 $duration: 0.7s;
-$cubic-bezier: cubic-bezier(0.36, 1.5, 0.64, 1);
+$spring: cubic-bezier(0.36, 1.5, 0.64, 1);
