--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -7,6 +7,7 @@
 
 @import "../components/header";
 @import "../components/footer";
+@import "../components/screen-blur";
 
 @import "../layout/index/intro";
 @import "../layout/index/about";
