--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1081,6 +1081,31 @@ body {
   pointer-events: none;
 }
 
+@supports (backdrop-filter: blur()) {
+  body {
+    position: relative;
+  }
+  body::before, body::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5rem;
+    z-index: 2;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    pointer-events: none;
+    mask-image: linear-gradient(to bottom, black 40%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to bottom, black 40%, transparent 100%);
+  }
+  body::after {
+    top: auto;
+    bottom: 0;
+    mask-image: linear-gradient(to top, black 40%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to top, black 40%, transparent 100%);
+  }
+}
 .intro {
   position: relative;
   overflow: hidden;
@@ -1371,6 +1396,7 @@ body {
 .staff__body {
   display: grid;
   grid-template-rows: auto 25%;
+  gap: 2rem;
   justify-content: space-between;
 }
 .staff__titlebox {
@@ -2103,6 +2129,56 @@ body {
 }
 .connection__input-wrapper--custom {
   grid-column: span 3;
+}
+.connection__select {
+  cursor: pointer;
+  position: relative;
+  user-select: none;
+}
+.connection__select-input {
+  pointer-events: none;
+}
+.connection__select-icon {
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%) rotate(90deg);
+  transition: transform 0.3s ease;
+  pointer-events: none;
+}
+.connection__select.open .connection__select-icon {
+  transform: translateY(-50%) rotate(-90deg);
+}
+.connection__select-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  font-size: 0.875rem;
+  max-height: 0;
+  visibility: hidden;
+  pointer-events: none;
+  overflow-y: auto;
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  background-color: rgba(255, 255, 255, 0.02);
+  border: rgba(214, 208, 198, 0.1) solid 0.078125rem;
+  transition-duration: 0.35s;
+}
+.connection__select.open .connection__select-dropdown {
+  max-height: 16rem;
+  visibility: visible;
+  pointer-events: auto;
+}
+.connection__select-item {
+  cursor: pointer;
+  padding: 1rem 2rem;
+  border: rgba(214, 208, 198, 0) solid 0.078125rem;
+  transition: 0.35s;
+}
+.connection__select-item:hover {
+  border: rgba(214, 208, 198, 0.2) solid 0.078125rem;
 }
 .connection__footnote {
   font-size: 0.75rem;
