--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -17,6 +17,7 @@ $size-48px: 3rem;
 $size-56px: 3.5rem;
 $size-64px: 4rem;
 $size-72px: 4.5rem;
+$size-80px: 5rem;
 $size-96px: 6rem;
 $size-128px: 8rem;
 $size-256px: 16rem;
