--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -822,7 +822,12 @@ ul li {
   list-style: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-size: inherit;
   font-weight: inherit;
 }
@@ -832,6 +837,8 @@ img {
 }
 
 body {
+  position: relative;
+  scrollbar-gutter: stable;
   width: 100%;
   min-height: 100dvh;
   background: repeating-linear-gradient(to right, #020109, #020109 300px, rgba(2, 1, 9, 0.97) 1px, rgba(2, 1, 9, 0.97) 301px);
@@ -839,6 +846,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+body.block-scroll {
+  overflow: hidden;
 }
 
 body {
@@ -893,13 +903,13 @@ body {
   }
 }
 .header__nav-item {
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   padding: 0.375rem;
   overflow: hidden;
-  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
   text-transform: uppercase;
   font-weight: 660;
 }
@@ -916,19 +926,21 @@ body {
   background-color: #FFFFFF;
   color: #020109;
   pointer-events: none;
-  transform: translateY(100%);
-  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
-}
-.header__nav-item:hover, .header__nav-item:focus {
-  transform: translateY(0);
+  translate: 0 100%;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
 }
 .header__nav-item:hover::before, .header__nav-item:focus::before {
-  transform: translateY(0);
+  translate: 0 0;
 }
 .header__nav-item--menu {
+  position: relative;
+  z-index: 5;
   display: flex;
   align-items: center;
   gap: 0.25rem;
+}
+.header__nav-item--menu.active::before {
+  translate: 0 0;
 }
 .header__nav-item--menu button {
   text-transform: uppercase;
@@ -940,13 +952,13 @@ body {
   pointer-events: none;
 }
 .header__tel {
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   padding: 0.375rem;
   overflow: hidden;
-  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
   text-transform: uppercase;
   font-weight: 660;
 }
@@ -963,14 +975,102 @@ body {
   background-color: #FFFFFF;
   color: #020109;
   pointer-events: none;
-  transform: translateY(100%);
-  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
-}
-.header__tel:hover, .header__tel:focus {
-  transform: translateY(0);
+  translate: 0 100%;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
 }
 .header__tel:hover::before, .header__tel:focus::before {
-  transform: translateY(0);
+  translate: 0 0;
+}
+
+.dropdown {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow-y: auto;
+  padding-top: 2.5rem;
+  padding-bottom: 6rem;
+  color: #D6D0C6;
+  background-color: #020109;
+  pointer-events: none;
+  translate: -100% 0;
+  transition: 0.7s ease;
+}
+.dropdown.active {
+  pointer-events: auto;
+  translate: 0 0;
+}
+.dropdown__container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.dropdown__body {
+  width: 100%;
+}
+.dropdown__list {
+  counter-reset: item-counter;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 2.5rem;
+}
+.dropdown__list[data-type=physical] {
+  display: none;
+}
+.dropdown__item {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  gap: 0.5rem;
+  width: fit-content;
+  text-transform: uppercase;
+  font-size: clamp(2rem, 5vw, 5rem);
+  line-height: clamp(2rem, 5vw, 5rem);
+  font-weight: 550;
+  transition-duration: 0.7s;
+}
+.dropdown__item::before {
+  counter-increment: item-counter;
+  content: "[0" counter(item-counter) "]";
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+}
+.dropdown__item:hover {
+  color: #FFFFFF;
+}
+.dropdown__item:hover .dropdown__image-wrapper {
+  rotate: -10deg;
+  scale: 1;
+  opacity: 1;
+  translate: 0 0;
+}
+.dropdown__image-wrapper {
+  display: block;
+  width: 8rem;
+  height: 9.5rem;
+  background-color: #FFFFFF;
+  padding: 0.5rem;
+  padding-bottom: 1rem;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: -10%;
+  pointer-events: none;
+  scale: 0.5;
+  opacity: 0;
+  translate: -5rem 0;
+  transition-duration: 0.4666666667s;
+}
+.dropdown__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .footer {
@@ -1092,7 +1192,7 @@ body {
     left: 0;
     width: 100%;
     height: 5rem;
-    z-index: 2;
+    z-index: 3;
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     pointer-events: none;
@@ -1520,6 +1620,41 @@ body {
   bottom: -5rem;
 }
 
+.switcher {
+  position: relative;
+  z-index: 0;
+  width: fit-content;
+  overflow: hidden;
+  display: flex;
+  border: 0.09375rem solid rgba(214, 208, 198, 0.25);
+  border-radius: 2rem;
+  margin-top: 2rem;
+}
+.switcher__indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: 100%;
+  width: 55%;
+  border-radius: 2rem;
+  background-color: white;
+  pointer-events: none;
+  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+}
+.switcher__item {
+  cursor: pointer;
+  position: relative;
+  mix-blend-mode: difference;
+  padding: 0.5rem 3.5rem;
+}
+.switcher__item[data-type=juridical].active ~ .switcher__indicator {
+  transform: translateX(0%);
+}
+.switcher__item[data-type=physical].active ~ .switcher__indicator {
+  transform: translateX(90%);
+}
+
 .services {
   padding: 2rem 0;
   margin-top: 6rem;
@@ -1554,40 +1689,6 @@ body {
   line-height: 3rem;
   font-weight: 660;
   margin-top: 2rem;
-}
-.services__switcher {
-  position: relative;
-  z-index: 0;
-  width: fit-content;
-  overflow: hidden;
-  display: flex;
-  border: 0.09375rem solid rgba(214, 208, 198, 0.25);
-  border-radius: 2rem;
-  margin-top: 2rem;
-}
-.services__switcher-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  height: 100%;
-  width: 55%;
-  border-radius: 2rem;
-  background-color: white;
-  pointer-events: none;
-  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
-}
-.services__switcher-item {
-  cursor: pointer;
-  position: relative;
-  mix-blend-mode: difference;
-  padding: 0.5rem 3.5rem;
-}
-.services__switcher-item[data-type=juridical].active ~ .services__switcher-indicator {
-  transform: translateX(0%);
-}
-.services__switcher-item[data-type=physical].active ~ .services__switcher-indicator {
-  transform: translateX(90%);
 }
 .services__body {
   margin-top: 6rem;
@@ -2059,13 +2160,13 @@ body {
   gap: 1rem;
 }
 .connection__links-item {
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   padding: 0.375rem;
   overflow: hidden;
-  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
   text-transform: uppercase;
   font-size: 0.75rem;
   line-height: 0.75rem;
@@ -2084,14 +2185,11 @@ body {
   background-color: #FFFFFF;
   color: #020109;
   pointer-events: none;
-  transform: translateY(100%);
-  transition: transform 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
-}
-.connection__links-item:hover, .connection__links-item:focus {
-  transform: translateY(0);
+  translate: 0 100%;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
 }
 .connection__links-item:hover::before, .connection__links-item:focus::before {
-  transform: translateY(0);
+  translate: 0 0;
 }
 .connection__form {
   display: flex;
