--- a/styles/layout/index/_services.scss
+++ b/styles/layout/index/_services.scss
@@ -1,3 +1,4 @@
+@import "../../components/switcher";
 .services {
 	padding: 2rem 0;
 	margin-top: 6rem;
@@ -12,40 +13,6 @@
 	}
 	&__title {
 		@include block-title();
-	}
-	&__switcher {
-		position: relative;
-		z-index: 0;
-		width: fit-content;
-		overflow: hidden;
-		display: flex;
-		border: $size-1-5px solid rgba($color-D6D0C6, 0.25);
-		border-radius: 2rem;
-		margin-top: 2rem;
-		&-indicator {
-			position: absolute;
-			top: 0;
-			left: 0;
-			z-index: -1;
-			height: 100%;
-			width: 55%;
-			border-radius: 2rem;
-			background-color: rgba($color-FFFFFF, 1);
-			pointer-events: none;
-			transition: transform $duration $spring;
-		}
-		&-item {
-			cursor: pointer;
-			position: relative;
-			mix-blend-mode: difference;
-			padding: 0.5rem 3.5rem;
-			&[data-type="juridical"].active ~ .services__switcher-indicator {
-				transform: translateX(0%);
-			}
-			&[data-type="physical"].active ~ .services__switcher-indicator {
-				transform: translateX(90%);
-			}
-		}
 	}
 	&__body {
 		margin-top: 6rem;
