--- a/media/icon-font/style.css
+++ b/media/icon-font/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?2jjvn5');
-  src:  url('fonts/icomoon.eot?2jjvn5#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?2jjvn5') format('truetype'),
-    url('fonts/icomoon.woff?2jjvn5') format('woff'),
-    url('fonts/icomoon.svg?2jjvn5#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?3o8oll');
+  src:  url('fonts/icomoon.eot?3o8oll#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?3o8oll') format('truetype'),
+    url('fonts/icomoon.woff?3o8oll') format('woff'),
+    url('fonts/icomoon.svg?3o8oll#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cross:before {
+  content: "\e907";
+}
 .icon-play:before {
   content: "\e905";
 }
