--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -996,7 +996,7 @@ body {
   background-color: #020109;
   pointer-events: none;
   translate: -100% 0;
-  transition: 0.7s ease;
+  transition: translate 0.7s ease;
 }
 .dropdown.active {
   pointer-events: auto;
@@ -2228,56 +2228,6 @@ body {
 .connection__input-wrapper--custom {
   grid-column: span 3;
 }
-.connection__select {
-  cursor: pointer;
-  position: relative;
-  user-select: none;
-}
-.connection__select-input {
-  pointer-events: none;
-}
-.connection__select-icon {
-  position: absolute;
-  right: 16px;
-  top: 50%;
-  transform: translateY(-50%) rotate(90deg);
-  transition: transform 0.3s ease;
-  pointer-events: none;
-}
-.connection__select.open .connection__select-icon {
-  transform: translateY(-50%) rotate(-90deg);
-}
-.connection__select-dropdown {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  font-size: 0.875rem;
-  max-height: 0;
-  visibility: hidden;
-  pointer-events: none;
-  overflow-y: auto;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  background-color: rgba(255, 255, 255, 0.02);
-  border: rgba(214, 208, 198, 0.1) solid 0.078125rem;
-  transition-duration: 0.35s;
-}
-.connection__select.open .connection__select-dropdown {
-  max-height: 16rem;
-  visibility: visible;
-  pointer-events: auto;
-}
-.connection__select-item {
-  cursor: pointer;
-  padding: 1rem 2rem;
-  border: rgba(214, 208, 198, 0) solid 0.078125rem;
-  transition: 0.35s;
-}
-.connection__select-item:hover {
-  border: rgba(214, 208, 198, 0.2) solid 0.078125rem;
-}
 .connection__footnote {
   font-size: 0.75rem;
   line-height: 0.75rem;
@@ -2363,4 +2313,55 @@ body {
   height: 30rem;
   left: 20%;
   top: 40%;
+}
+
+.select {
+  cursor: pointer;
+  position: relative;
+  user-select: none;
+}
+.select__input {
+  pointer-events: none;
+}
+.select__icon {
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%) rotate(90deg);
+  transition: transform 0.3s ease;
+  pointer-events: none;
+}
+.select.open .select__icon {
+  transform: translateY(-50%) rotate(-90deg);
+}
+.select__dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  font-size: 0.875rem;
+  max-height: 0;
+  visibility: hidden;
+  pointer-events: none;
+  overflow-y: auto;
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  background-color: rgba(255, 255, 255, 0.02);
+  border: rgba(214, 208, 198, 0.1) solid 0.078125rem;
+  transition-duration: 0.35s;
+}
+.select.open .select__dropdown {
+  max-height: 16rem;
+  visibility: visible;
+  pointer-events: auto;
+}
+.select__item {
+  cursor: pointer;
+  padding: 1rem 2rem;
+  border: rgba(214, 208, 198, 0) solid 0.078125rem;
+  transition: 0.35s;
+}
+.select__item:hover {
+  border: rgba(214, 208, 198, 0.2) solid 0.078125rem;
 }
